src/objects/Invoice_Scheduler__c.object
<CustomObject>
    <fields>
        <fullName>Automatically_Post_Invoices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked when the invoice run is scheduled, in the batch processing file, after the invoices are created with default status you should run an update of all those invoices to change the status to post. Remember this is required as the invoices must first be created with draft status and then changed to post status as there might be some workflows that are on the status change from Draft to Posted.</description>
        <inlineHelpText>If this is checked when the invoice run is scheduled, in the batch processing file, after the invoices are created with default status you should run an update of all those invoices to change the status to post. Remember this is required as the invoices m</inlineHelpText>
        <label>Automatically Post Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_Usage_Charges__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Bill Usage Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_Batch__c</fullName>
        <label>Invoice Batch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Batch 1</fullName>
                </value>
                <value>
                    <fullName>Batch 2</fullName>
                </value>
                <value>
                    <fullName>Batch 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>If you use Invoice Date as 15mar &amp; Target Date as 30mar, the billing will run on 15mar and the charges will be calculated up to 30mar.</description>
        <inlineHelpText>If you use Invoice Date as 15mar &amp; Target Date as 30mar, the billing will run on 15mar and the charges will be calculated up to 30mar.</inlineHelpText>
        <label>Invoice Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Day_Of_Month__c</fullName>
        <description>This is the day of the month that appears on the Invoice as the Invoice Date.</description>
        <inlineHelpText>This is the day of the month that appears on the Invoice as the Invoice Date.</inlineHelpText>
        <label>Invoice Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Day_of_Week__c</fullName>
        <description>Invoice Day of Week</description>
        <inlineHelpText>Invoice Day of Week like 1 for Sunday</inlineHelpText>
        <label>Invoice Day of Week</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Run_day_of_the_month__c</fullName>
        <description>When the scheduler runs &quot;Monthly&quot; it will run on this selected day every month.</description>
        <inlineHelpText>When the scheduler runs &quot;Monthly&quot; it will run on this selected day every month.</inlineHelpText>
        <label>Run day of the month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Days_of_the_Month</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Run_day_of_the_week__c</fullName>
        <description>When the scheduler runs &quot;Weekly&quot; it will run on this selected day every week.</description>
        <inlineHelpText>When the scheduler runs &quot;Weekly&quot; it will run on this selected day every week.</inlineHelpText>
        <label>Run day of the week</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_and_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Start Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>If you use Invoice Date as 15mar &amp; Target Date as 30mar, the billing will run on 15mar and the charges will be calculated up to 30mar.</description>
        <inlineHelpText>If you use Invoice Date as 15mar &amp; Target Date as 30mar, the billing will run on 15mar and the charges will be calculated up to 30mar.</inlineHelpText>
        <label>Target Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Day_Of_Month__c</fullName>
        <description>This is the &quot;as of&quot; billing date. If you set the Target Date as 20th of the month, the services will be billed as of that date.</description>
        <inlineHelpText>This is the &quot;as of&quot; billing date. If you set the Target Date as 20th of the month, the services will be billed as of that date.</inlineHelpText>
        <label>Target Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Days_of_the_Month</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Day_of_Week__c</fullName>
        <description>Target Day of week</description>
        <inlineHelpText>Target Day of week like 1 for sunday</inlineHelpText>
        <label>Target Day of Week</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Schedule.
Once - Billing will be done only one time.
Daily - Billing will be repeated continuously daily and so on</description>
        <inlineHelpText>Type of Schedule.
Once - Billing will be done only one time.
Daily - Billing will be repeated continuously daily and so on</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Once</fullName>
                    <default>true</default>
                    <label>Once</label>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Invoice Scheduler</label>
    <nameField>
        <label>Invoice Scheduler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Schedulers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>